--- a/HISApp/appsettings.json
+++ b/HISApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DBMS": "Server=DESKTOP-25H4041;Database=HISS;TrustServerCertificate=True;Trusted_Connection=True;"
+    "DBMS": "Server=USER;Database=HISS;TrustServerCertificate=True;Trusted_Connection=True;"
   },
 
   "Logging": {
