--- a/HISApp/HISApp.csproj
+++ b/HISApp/HISApp.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\" />
     <Folder Include="Feature\Doctor\GetByIdAndDepartmet\" />
     <Folder Include="Service\" />
   </ItemGroup>
